samples/_failures_safe/1761287019_5b8852_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_033a5a82.c: In function ‘main’:
./samples/SAFE/__tmp_033a5a82.c:130:12: error: expected declaration or statement at end of input
  130 |     struct LogAnalyzer analyzer;
      |            ^~~~~~~~~~~
